added chat deletion
